<resources>
    <string name="app_name">Donesi Klon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- VALIDATION -->
    <string name="reqUsername">Username is required.</string>
    <string name="mustBeEmailUsername">  Username must be an email address.</string>
    <string name="reqPassword">Password is required.</string>
    <string name="mustLengthPassword">Password must be at last 6 characters.</string>
    <string name="reqPhoneNumber">Phone number is required.</string>
    <string name="reqName">Name is required.</string>
    <string name="reqSurname">Surname is required.</string>
    <string name="reqDeliveryAddress">Delivery address is required.</string>
    <string name="reqAll">All fields are required.</string>
    <string name="successfullyReg">Successfully registered.</string>
    <string name="successfullyLogged">Successfully logged.</string>

    <!-- DRAWER_MENU -->
    <string name="restaurants">Restaurants</string>
    <string name="visits_history">Visits history</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="incoming_orders">Near by restaurants</string>
    <string name="orders">Orders History</string>
    <string name="logout">Log out</string>


    <!-- REGISTRATION -->>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="user_img_description">SignIn or SignUp icon</string>

    <!-- ADD REVIEW -->
    <string name="leave_comment">Leave a comment</string>
    <string name="review_img_description">Review icon</string>
    <!-- SETTINGS -->
    <string name="change_personal_information">Change personal information</string>
    <string name="new_delivery_address">New Delivery Address</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="choose_language">Choose language</string>
    <string name="englishRadioButton">English</string>
    <string name="serbianRadioButton">Serbian</string>
    <string name="settings">Settings</string>
    <string name="successfullyChangedSettings">Successfully changed settings.</string>
    <string name="unsuccessfullyLogged">Settings can not be changed, try again.</string>

    <!-- BUTTONS -->>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="addReviewButton">Review</string>
    <string name="seeReviewsButton">See Reviews</string>
    <string name="cancelButton">Cancel</string>
    <string name="applyChangesButton">Apply Changes</string>
    <string name="title_activity_maps">Map</string>
    <string name="showDirections">Show Directions</string>

    <!-- CART -->
    <string name="orderButton">Order</string>
    <string name="addedToCart">Added to Cart</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="checkout">Checkout</string>
    <string name="successfullyOrdered">Successfully ordered meal</string>
    <string name="emptyCart">Empty cart</string>
    <string name="meal">Meal</string>
    <string name="addedMeal">is added to cart</string>
    <string name="addToCart">Add to cart</string>
    <!-- FRAGMENT_RESTAURANTS -->
    <string name="menu">Menu</string>
    <string name="emptyMenu">Empty menu</string>
    <string name="searchForRestaurants">Search for Restaurants</string>

    <string name="totalSpent">Total spent:</string>
    <!-- VISIT -->
    <string name="clearButton">Clear history</string>
    <string name="wrongCredentials">Wrong credentials</string>
    <string name="errorGetting">Error getting documents for email checking</string>
    <string name="cantAddUser">Couldn\'t add user to database</string>
    <string name="emailTaken">Email you entered is taken</string>
    <string name="yourLocation">Your Location</string>
    <string name="placeNumber">Place number</string>
    <string name="errorGettingDocuments">Error getting documents:</string>
    <string name="address">Address: </string>
    <string name="location">Location: </string>
    <string name="description">Description: </string>
    <string name="distance">Distance: </string>
    <string name="deliveryTime">Delivery Time: </string>
    <string name="checkFields">Plase check if all fields are correctlly filled</string>
    <string name="thankForReview">Thank you for your review!</string>
    <string name="price">Price: </string>
    <string name="emptyReviewsList">Empty reviews list</string>
    <string name="emptyVisitsHistory">Empty visits history</string>

</resources>
