<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/colorAccent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/user_img_description"
        app:srcCompat="@drawable/signin_icon" />

    <EditText
        android:id="@+id/usernameSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="11"
        android:drawableLeft="@drawable/user_text_icon"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="11"
        android:drawableLeft="@drawable/password_text_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/signUpButton" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:text="@string/signInButton" />

    </LinearLayout>

</RelativeLayout>
