<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/colorAccent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/review_img_description"
        app:srcCompat="@drawable/review_icon" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="240dp"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/border"
        android:ems="19"
        android:gravity="top|start"
        android:hint="@string/leave_comment"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="8"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:scrollbars="vertical"
        android:textSize="17sp" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/showReviews"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:onClick="Call"
            android:text="@string/seeReviewsButton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitReview"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:onClick="Call"
            android:text="@string/addReviewButton"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/distDelLayout"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Distance:"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delivery Time: "
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="570dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showDirections"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:onClick="Call"
            android:text="@string/showDirections"
            android:drawableRight="@drawable/directions"
            android:orientation="horizontal"
            android:textStyle="bold" />


    </LinearLayout>
</RelativeLayout>
