<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/colorAccent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/review_icon" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="240dp"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/border"
        android:gravity="top|start"
        android:hint="@string/leave_comment"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:scrollbars="vertical"
        />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        />
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:text="@string/cancelButton" />

        <Button
            android:id="@+id/buttonAddReview"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/addReviewButton" />


    </LinearLayout>

</RelativeLayout>
